# AI_ML_Internship-Context-Aware-Chatbot-Using-LangChain-and-RAG

./: README.md  REDME.md  app.py  main.py  pyproject.toml  requirements.txt
.venv_clean/: pyvenv.cfg
.venv_clean/Scripts/: activate  activate.bat
